# MedClass3D

./: .gitignore  README.md  pyproject.toml
configs/: train_age_ord_reg.yaml  train_age_reg.yaml  train_classification.yaml
docs/: custom-datasets.md  data-csv-format.md  inference.md  output-layout.md  preprocessing-ct.md  preprocessing-mri.md  tasks-and-losses.md  training-configs.md
notebooks/: download_checkpoint.ipynb  inspect_wandb.ipynb  parse_wandb_offline.ipynb
scripts/: average_layercam.py  gradcam_external.py  gradcam_testset.py  predict_external.py  predict_test.py  preprocess_ct.py  preprocess_mri.py  train.py
src/medclass3d/: cli.py
src/medclass3d/data/: balanced_sampler.py  base_datamodule.py  batchgenerators_transforms.py  datamodules.py  mixup.py
src/medclass3d/data/preprocessing/: blosc_helper.py  normalization.py
src/medclass3d/evaluation/: balanced_accuracy.py  conf_mat.py  metrics.py
src/medclass3d/gradcam/: __init__.py  averaging.py  gradcam3d_viz.py  multimodal_gradcam.py  runner.py
src/medclass3d/models/: losses.py
src/medclass3d/models/backbones/: resenc.py
src/medclass3d/models/heads/: classification.py
src/medclass3d/training/: optim.py  trainer.py
src/medclass3d/utils/: parsing.py
src/medregression3d/: cli.py
src/medregression3d/data/: datamodules.py
src/medregression3d/evaluation/: metrics.py
src/medregression3d/models/backbones/: resenc.py
src/medregression3d/models/heads/: regression.py
src/medregression3d/training/: trainer.py
