[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medclass3d"
version = "0.1.0"
description = "3D medical image classification with PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Aaron" },
]
keywords = ["medical-imaging", "deep-learning", "pytorch", "classification", "3d", "mri", "ct"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.23.5",
    "lightning==2.4.0",
    "torchmetrics==1.6.1",
    "timm>=0.9.16",
    "wandb>=0.15.8",
    "pillow>=9.3.0",
    "efficientnet-pytorch>=0.7.1",
    "madgrad>=1.2",
    "dynamic-network-architectures @ git+https://github.com/MIC-DKFZ/dynamic-network-architectures.git",
    "rich>=12.6.0",
    "matplotlib>=3.6.2",
    "hydra-core>=1.3.2",
    "batchgeneratorsv2>=0.2.3",
    "blosc2>=3.0.0",
    "peft>=0.14.0",
    "acvl_utils @ git+https://github.com/MIC-DKFZ/acvl_utils.git",
    "hd-bet",
    "monai>=1.3.0",
    "scipy>=1.9.0",
    "scikit-image>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "ipython>=8.0",
    "jupyter>=1.0",
]

[project.scripts]
medclass-train = "medclass3d.cli:main"

[project.urls]
Repository = "https://github.com/AaronC-BME/MedClass3D"

[tool.setuptools.packages.find]
where = ["src"]
include = ["medclass3d*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
